force-app/zurich-base/main/default/objects/Opportunity/fields/ProductBranchDetail__c.field-meta.xml
<CustomField>
    <fullName>ProductBranchDetail__c</fullName>
    <label>Product Branch Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>