force-app/zurich-base/main/default/objects/Opportunity/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(ZE/OCS) Identifica el producto para el que se realiza la oferta. En la web se identifica como Tipo de Registro.</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>