force-app/zurich-base/main/default/objects/Opportunity/fields/Propensity__c.field-meta.xml
<CustomField>
    <fullName>Propensity__c</fullName>
    <label>Propensity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>