force-app/zurich-base/main/default/objects/Opportunity/fields/QuoteLifeNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteLifeNumber__c</fullName>
    <description>Identificador de la oferta de vida</description>
    <label>Quote Life Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>