force-app/zurich-base/main/default/objects/Opportunity/fields/QuoteLink__c.field-meta.xml
<CustomField>
    <fullName>QuoteLink__c</fullName>
    <description>(OCS) Enlace de la oferta en INFO.</description>
    <label>Quote Link</label>
    <type>Url</type>
</CustomField>