force-app/zurich-base/main/default/objects/Opportunity/fields/ReassignToContactCenter__c.field-meta.xml
<CustomField>
    <fullName>ReassignToContactCenter__c</fullName>
    <formula>AND(
ISPICKVAL(StageName,&apos;Legit Lead&apos;), 
Account.RecordType.DeveloperName = &apos;Lead&apos;,
IntermediaryId__r.EnableReassignmentLeadOffers__c,
$Setup.Lead_Offers__c.DaysToReassignOffer__c &gt; 0, 
TODAY() - DATEVALUE(CreatedDate) &gt; $Setup.Lead_Offers__c.DaysToReassignOffer__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reassign To ContactCenter</label>
    <type>Checkbox</type>
</CustomField>