force-app/zurich-base/main/default/objects/Opportunity/fields/ResultingPolicyLifeNumber__c.field-meta.xml
<CustomField>
    <fullName>ResultingPolicyLifeNumber__c</fullName>
    <label>Resulting Policy Life Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>