force-app/zurich-base/main/default/objects/Opportunity/fields/ResultingPolicyNumber__c.field-meta.xml
<CustomField>
    <fullName>ResultingPolicyNumber__c</fullName>
    <description>(ZE) Permite al advisor indicar el número de póliza generado a través de la oferta para que posteriormente, a través de la integración, se haga match entre la oferta y la póliza.</description>
    <label>Resulting Policy Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>