force-app/zurich-base/main/default/objects/Opportunity/fields/Sales_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sales_Loss_Reason__c</fullName>
    <description>Campo Motivo de pérdida para su uso en la app Ventas, sustituye al ya existente para el resto de apps</description>
    <label>Sales Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesProcess__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested later on</fullName>
                <label>Interesado más adelante</label>
            </value>
            <value>
                <fullName>CC - Interested, managed by my agent</fullName>
            </value>
            <value>
                <fullName>Better competition conditions</fullName>
                <label>Mejores condiciones competencia</label>
            </value>
            <value>
                <fullName>Lack/limitation of coverage</fullName>
                <label>Falta/limitación de coberturas</label>
            </value>
            <value>
                <fullName>Insurance required by the bank</fullName>
                <label>Seguro obligado con el banco</label>
            </value>
            <value>
                <fullName>Already take a policy</fullName>
                <label>Ya ha contratado póliza</label>
            </value>
            <value>
                <fullName>Bad experience</fullName>
                <label>Mala experiencia</label>
            </value>
            <value>
                <fullName>Need higher discount</fullName>
                <label>Necesita descuento mayor</label>
            </value>
            <value>
                <fullName>Incidence unresolved with policy</fullName>
                <label>Incidencia actual no resuelta con alguna póliza en vigor</label>
            </value>
            <value>
                <fullName>No insurable risk</fullName>
                <label>No Dispone de Riesgo Asegurable</label>
            </value>
            <value>
                <fullName>Agenda Not Contacted</fullName>
                <label>Agenda No Contactada</label>
            </value>
            <value>
                <fullName>Out of Recruitment Policy</fullName>
                <label>Fuera Política Contratación</label>
            </value>
            <value>
                <fullName>Not Zurich customer</fullName>
                <label>No es cliente Zurich</label>
            </value>
            <value>
                <fullName>No Recording Accepted</fullName>
                <label>No Acepta Grabación</label>
            </value>
            <value>
                <fullName>Unreachable After Hours</fullName>
                <label>Ilocalizable Fuera de Horario</label>
            </value>
            <value>
                <fullName>Maximum Attempts</fullName>
                <label>Máximo Intentos</label>
            </value>
            <value>
                <fullName>Robinson List</fullName>
                <label>Lista Robinson</label>
            </value>
            <value>
                <fullName>No cooperation</fullName>
                <label>No colabora</label>
            </value>
            <value>
                <fullName>CC - Interested contact agent</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Canceled Policy</fullName>
                <label>Póliza Anulada</label>
            </value>
            <value>
                <fullName>Not interested Policy - Revocation Consents</fullName>
                <label>No quiere Póliza - Revocación Consentimientos</label>
            </value>
            <value>
                <fullName>HOME- Never had it and does not want it</fullName>
                <label>HOGAR- No ha tenido nunca y no lo quiere</label>
            </value>
            <value>
                <fullName>Insufficient/incorrect data</fullName>
                <label>Datos insuficientes/erróneos</label>
            </value>
            <value>
                <fullName>Automatic - Not managed by the Agent</fullName>
            </value>
            <value>
                <fullName>Automatic - Campaign completed</fullName>
            </value>
            <value>
                <fullName>Automatic - Agent removes from the campaign</fullName>
            </value>
            <value>
                <fullName>Do not want Policy - Expired</fullName>
                <label>No quiere Póliza - Supera Antigüedad</label>
            </value>
            <value>
                <fullName>Integral customer</fullName>
            </value>
            <value>
                <fullName>Impossible to contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>