force-app/zurich-base/main/default/objects/Opportunity/fields/Sales_Loss_Reason_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sales_Loss_Reason_Date_Time__c</fullName>
    <description>Especificar fecha y hora de contacto con cliente en los casos  de Cerrada Perdida por Motivo: Interesado más adelante e Interesado, pero prefiero que lo gestione mi agente.  Uso en App Ventas</description>
    <label>Sales Loss Reason Date/Time</label>
    <type>DateTime</type>
</CustomField>