force-app/zurich-base/main/default/objects/Opportunity/fields/Sales_Loss_SubReason__c.field-meta.xml
<CustomField>
    <fullName>Sales_Loss_SubReason__c</fullName>
    <label>Sales Loss SubReason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CARS-Uses/type of risk</fullName>
                <label>AUTO-Usos/tipo de riesgo</label>
            </value>
            <value>
                <fullName>CARS-Non-contractable guaranties</fullName>
                <label>AUTO-Garantías no contratables</label>
            </value>
            <value>
                <fullName>CARS-Age of risk</fullName>
                <label>AUTO-Antigüedad del riesgo</label>
            </value>
            <value>
                <fullName>CARS-Score</fullName>
                <label>AUTO-Score</label>
            </value>
            <value>
                <fullName>CARS-Bonus/Malus outside of contracting rules</fullName>
                <label>AUTO-Bonus/Malus fuera de normas de contratación</label>
            </value>
            <value>
                <fullName>CARS-Driver</fullName>
                <label>AUTO-Conductor</label>
            </value>
            <value>
                <fullName>HOME-Uses/type of risk</fullName>
                <label>HOGAR-Usos/tipo de riesgo</label>
            </value>
            <value>
                <fullName>HOME-Non-contractable guaranties</fullName>
                <label>HOGAR-Garantías no contratables</label>
            </value>
            <value>
                <fullName>HOME-Age of risk</fullName>
                <label>HOGAR-Antigüedad del riesgo</label>
            </value>
            <value>
                <fullName>HOME-Payment Installment</fullName>
                <label>HOGAR-Pago Fraccionamiento</label>
            </value>
            <value>
                <fullName>HOME-Jewellery and valuable objects</fullName>
                <label>HOGAR-Joyas y objetos de valor</label>
            </value>
            <value>
                <fullName>HOME-Type of housing construction</fullName>
                <label>HOGAR-Tipo de fabricación vivienda</label>
            </value>
            <value>
                <fullName>HOME-Uninhabited</fullName>
                <label>HOGAR-Despoblado</label>
            </value>
            <value>
                <fullName>HOME-Unoccupied housing</fullName>
                <label>HOGAR-Vivienda deshabitada</label>
            </value>
            <value>
                <fullName>LIFE-Capital</fullName>
                <label>VIDA-Capitales</label>
            </value>
            <value>
                <fullName>LIFE-Age</fullName>
                <label>VIDA-Edad</label>
            </value>
            <value>
                <fullName>LIFE-High risk sport</fullName>
                <label>VIDA-Salud-Deporte de riesgo</label>
            </value>
            <value>
                <fullName>LIFE-Illness</fullName>
                <label>VIDA-Salud-Enfermedad</label>
            </value>
            <value>
                <fullName>LIFE-Travel abroad + 60d</fullName>
                <label>VIDA-Salud-Viaje al extranjero +60d</label>
            </value>
            <value>
                <fullName>LIFE-Tax Residence</fullName>
                <label>VIDA-Residencia Fiscal</label>
            </value>
            <value>
                <fullName>LIFE-PRP</fullName>
                <label>VIDA-PRP</label>
            </value>
            <value>
                <fullName>LIFE-High risk nationality</fullName>
                <label>VIDA-Nacionalidad de riesgo Alto</label>
            </value>
            <value>
                <fullName>LIFE-High risk CNO</fullName>
                <label>VIDA-CNO de riesgo Alto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>