force-app/zurich-base/main/default/objects/Opportunity/fields/SalesProcess__c.field-meta.xml
<CustomField>
    <fullName>SalesProcess__c</fullName>
    <description>Se autoinformará en la creación en función del tipo de cliente:

Cuenta-Lead &gt;&gt; Lead
Cuenta-Cliente &gt;&gt; Venta Cruzada</description>
    <label>Sales Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesProcesses</valueSetName>
    </valueSet>
</CustomField>