force-app/zurich-base/main/default/objects/Opportunity/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>(ZE/OCS) Identifica el ámbito a utilizar para la colaboración del registro.</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZE</fullName>
                <label>Zurich Empresas</label>
            </value>
            <value>
                <fullName>ZEO</fullName>
                <label>Zurich Empresas Orange</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>General</label>
            </value>
            <value>
                <fullName>ZEB</fullName>
                <label>Zurich Empresas Brokers</label>
            </value>
            <value>
                <fullName>Ventas</fullName>
                <label>Zurich Ventas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>