force-app/zurich-base/main/default/objects/Opportunity/fields/ScopeId__c.field-meta.xml
<CustomField>
    <fullName>ScopeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(ZE/OCS) Identifica el ámbito al que se encuentra asociada la oferta.</description>
    <label>Scope Name</label>
    <referenceTo>Scope__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>