force-app/zurich-base/main/default/objects/Opportunity/fields/SessionId__c.field-meta.xml
<CustomField>
    <fullName>SessionId__c</fullName>
    <description>Stores the session id and product code of an offer created in the web fomulary</description>
    <externalId>true</externalId>
    <label>SessionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>