force-app/zurich-base/main/default/objects/Opportunity/fields/SourceOpportunity__c.field-meta.xml
<CustomField>
    <fullName>SourceOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SourceOpportunities</relationshipLabel>
    <relationshipName>SourceOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>