force-app/zurich-base/main/default/objects/Opportunity/fields/SurchargeDiscount__c.field-meta.xml
<CustomField>
    <fullName>SurchargeDiscount__c</fullName>
    <description>(OCS) Identifica el recargo de la oferta en INFO.</description>
    <label>Surcharge/Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>