force-app/zurich-base/main/default/objects/Opportunity/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <description>(OCS) Identifica las tasas aplicadas a la oferta en INFO.</description>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>