force-app/zurich-base/main/default/objects/Opportunity/fields/TechnicalCode__c.field-meta.xml
<CustomField>
    <fullName>TechnicalCode__c</fullName>
    <description>(OCS) Identifica el código técnico del producto en INFO.</description>
    <formula>ProductId__r.TechnicalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Code</label>
    <type>Text</type>
</CustomField>