force-app/zurich-base/main/default/objects/Opportunity/fields/TechnicalProductCode__c.field-meta.xml
<CustomField>
    <fullName>TechnicalProductCode__c</fullName>
    <label>Technical Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>