force-app/zurich-base/main/default/objects/Opportunity/fields/TotalOptions__c.field-meta.xml
<CustomField>
    <fullName>TotalOptions__c</fullName>
    <description>Number of related options</description>
    <inlineHelpText>Number of related options</inlineHelpText>
    <label>Total Options</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>