force-app/zurich-base/main/default/objects/Opportunity/fields/TransferredAgentName__c.field-meta.xml
<CustomField>
    <fullName>TransferredAgentName__c</fullName>
    <description>(ZE) Agente a quien se transfiere la oferta si no se puede llevar a cabo la gestión desde Zurich Empresas. Es informado manualmente.</description>
    <label>Transferred Agent Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>