force-app/zurich-base/main/default/objects/Opportunity/fields/ValidationErrors__c.field-meta.xml
<CustomField>
    <fullName>ValidationErrors__c</fullName>
    <description>(ZE) identifica los errores de la validación con INFO (suscripción/competencias).</description>
    <label>Validation Errors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>