force-app/zurich-base/main/default/objects/Opportunity/fields/ZRM__c.field-meta.xml
<CustomField>
    <fullName>ZRM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZRM: usamos este campo para identificar las ofertas que un usuario de ZRM puede editar, se usa junto con la VR IntermediaryCannotEdit</description>
    <label>ZRM</label>
    <type>Checkbox</type>
</CustomField>