force-app/zurich-base/main/default/objects/Opportunity/recordTypes/Life.recordType-meta.xml
<RecordType>
    <fullName>Life</fullName>
    <active>true</active>
    <businessProcess>Offer - Vida</businessProcess>
    <label>Life</label>
</RecordType>