force-app/zurich-base/main/default/objects/Opportunity/recordTypes/NoLife.recordType-meta.xml
<RecordType>
    <fullName>NoLife</fullName>
    <active>true</active>
    <businessProcess>Offer - No vida</businessProcess>
    <label>No Life</label>
</RecordType>