force-app/zurich-base/main/default/objects/Opportunity/validationRules/BusinessCodeNumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>BusinessCodeNumeric</fullName>
    <active>true</active>
    <description>[VR Offer] El código de negocio debe ser numérico</description>
    <errorConditionFormula>AND(
    OR(
        Blocked__c = False,
        Anonymized__c = False,
        NOT(ISCHANGED(Blocked__c)),
        NOT(ISCHANGED(Anonymized__c))
     ),
     AND (
        NOT(ISNUMBER( BusinessCode__c )),
        $Profile.Name = &apos;ZE User&apos;
    )
)</errorConditionFormula>
    <errorDisplayField>BusinessCode__c</errorDisplayField>
    <errorMessage>[VR Offer] El código de negocio debe ser numérico</errorMessage>
</ValidationRule>