force-app/zurich-base/main/default/objects/Opportunity/validationRules/ChangeClosedLostStage.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeClosedLostStage</fullName>
    <active>true</active>
    <description>Validación que no permite modificar la etapa de una oferta en estado Cerrada perdida para aquellos que no tienen el custom permission Editar_ofertas_cerradas para los usuarios ventas</description>
    <errorConditionFormula>AND(
    OR(
        Blocked__c = False,
        Anonymized__c = False,
        NOT(ISCHANGED(Blocked__c)),
        NOT(ISCHANGED(Anonymized__c))
     ),
     (
        RecordType.DeveloperName = $CustomMetadata.Global_Configuration__mdt.Opportunity_RecordTypeDevName_NoLife.Value__c &amp;&amp;
        (
            $Profile.Name = &quot;Ventas User&quot; ||
            $Profile.Name = &quot;Agente Ventas&quot; || 
            $Profile.Name = &quot;Agente Ventas - AGR&quot;
        ) &amp;&amp;
        NOT($Permission.Editar_ofertas_cerradas) &amp;&amp;
        ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;) &amp;&amp;
        ISCHANGED(StageName)
     )
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>[VR Oferta] No se puede modificar una oferta en etapa Cerrada Perdida</errorMessage>
</ValidationRule>