force-app/zurich-base/main/default/objects/Opportunity/validationRules/DescriptionReasonOnlyExlusion.validationRule-meta.xml
<ValidationRule>
    <fullName>DescriptionReasonOnlyExlusion</fullName>
    <active>false</active>
    <description>No es posible rellenar la descripción de submotivo a menos que el motivo sea Exclusión/Política Técnica</description>
    <errorConditionFormula>/*Si la Descripción esta rellena y no es Exclusión/Política Técnica*/
AND(
    !ISBLANK( LossSubReasonDescription__c ) ,    
    !ISPICKVAL( Loss_Reason__c , &apos;Exclusión/Política Técnica&apos;)
)</errorConditionFormula>
    <errorDisplayField>LossSubReasonDescription__c</errorDisplayField>
    <errorMessage>[VR Offer] No se puede escribir en el campo de Descripción a menos que el motivo sea Exclusión/Política Técnica</errorMessage>
</ValidationRule>