force-app/zurich-base/main/default/objects/Opportunity/validationRules/InfoQuoteNumberWhenQuoted.validationRule-meta.xml
<ValidationRule>
    <fullName>InfoQuoteNumberWhenQuoted</fullName>
    <active>true</active>
    <description>[VR Oferta] Número de oferta (INFO) es obligatorio cuando sea Quoted</description>
    <errorConditionFormula>AND(
    OR(
        Blocked__c = False,
        Anonymized__c = False,
        NOT(ISCHANGED(Blocked__c)),
        NOT(ISCHANGED(Anonymized__c))
     ),
     ISPICKVAL(StageName,&quot;Quoted&quot;) &amp;&amp;
     ISBLANK( InfoQuoteNumber__c )&amp;&amp;
     RecordType.DeveloperName = &apos;NoLife&apos; &amp;&amp;
     $Profile.Id &lt;&gt; &apos;00e5I000000Hu97&apos; &amp;&amp;
     $Profile.Id &lt;&gt; &apos;00e5I000000UPld&apos; &amp;&amp;
     $Profile.Id &lt;&gt; &apos;00e5I000000QeQS&apos;
)</errorConditionFormula>
    <errorDisplayField>InfoQuoteNumber__c</errorDisplayField>
    <errorMessage>[VR Oferta] Número de oferta (INFO) es obligatorio cuando sea Quoted</errorMessage>
</ValidationRule>