force-app/zurich-base/main/default/objects/Opportunity/validationRules/LossReasonWhenClosedLost.validationRule-meta.xml
<ValidationRule>
    <fullName>LossReasonWhenClosedLost</fullName>
    <active>true</active>
    <description>[VR Oferta] Motivo de Pérdida es obligatorio cuando es Cerrada Perdida</description>
    <errorConditionFormula>AND(
    OR(
        Blocked__c = False,
        Anonymized__c = False,
        NOT(ISCHANGED(Blocked__c)),
        NOT(ISCHANGED(Anonymized__c))
     ),
     ISPICKVAL(StageName,&quot;Closed Lost&quot;) &amp;&amp;
     ISBLANK(TEXT(Loss_Reason__c)) &amp;&amp;
     $Profile.Id &lt;&gt; &apos;00e5I000000Hu97&apos; &amp;&amp;
     $Profile.Id &lt;&gt; &apos;00e5I000000UPld&apos; &amp;&amp;
     $Profile.Id &lt;&gt; &apos;00e5I000000QeQS&apos; &amp;&amp;
     $Profile.Name &lt;&gt; &apos;Ventas User&apos; &amp;&amp;
     $Profile.Name &lt;&gt; &apos;Agente Ventas&apos; &amp;&amp;
     $Profile.Name &lt;&gt; &apos;Agente Ventas - AGR&apos;
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>[VR Oferta] Motivo de Pérdida es obligatorio cuando es Cerrada Perdida</errorMessage>
</ValidationRule>