force-app/zurich-base/main/default/objects/Opportunity/validationRules/NoFinalPolicyNumberInformedAgent.validationRule-meta.xml
<ValidationRule>
    <fullName>NoFinalPolicyNumberInformedAgent</fullName>
    <active>true</active>
    <description>[Ventas] no permite pasar a a la etapa cerrada-ganada sin que este informado el campo Número de póliza resultante</description>
    <errorConditionFormula>AND(
    OR(
        Blocked__c = False,
        Anonymized__c = False,
        NOT(ISCHANGED(Blocked__c)),
        NOT(ISCHANGED(Anonymized__c))
    ),
    (
        $Profile.Name = &quot;Ventas User&quot; ||
        $Profile.Name = &quot;Agente Ventas&quot; ||
        $Profile.Name = &quot;Agente Ventas - AGR&quot;
    ) &amp;&amp;
        RecordType.DeveloperName = &apos;NoLife&apos; &amp;&amp;
        ISPICKVAL(StageName,&quot;Closed Won&quot;) &amp;&amp;
        ISBLANK(ResultingPolicyNumber__c
    )
)</errorConditionFormula>
    <errorMessage>[VR Oferta] Número de póliza resultante no informado</errorMessage>
</ValidationRule>